better way of declaring list of zones